--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -4,3 +4,4 @@ exec-once = USE_LAYER_SHELL=0 vicinae server # application launcer
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 exec-once = hyprpm reload -n #plugins
 exec-once = ~/.config/hypr/scripts/window-movement-binds.sh code
+exec-once = swaync # notification daemon
