--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -7,7 +7,7 @@
   "reload_style_on_change": true,
   "modules-left": ["hyprland/window"],
   "modules-center": ["hyprland/workspaces"],
-  "modules-right": ["hyprland/language", "pulseaudio", "clock"],
+  "modules-right": ["hyprland/language", "pulseaudio", "clock", "custom/notification"],
   "hyprland/window": {
     "format": "{initialTitle}",
     "separate-outputs": true,
@@ -51,5 +51,25 @@
   },
   "clock": {
     "format": "{:%a, %b %d, %Y - %H:%M}  "
+  },
+  "custom/notification": {
+    "tooltip": true,
+    "format": "<span size='16pt'>{icon}</span>",
+    "format-icons": {
+      "notification": "󱅫",
+      "none": "󰂜",
+      "dnd-notification": "󰂠",
+      "dnd-none": "󰪓",
+      "inhibited-notification": "󰂛",
+      "inhibited-none": "󰪑",
+      "dnd-inhibited-notification": "󰂛",
+      "dnd-inhibited-none": "󰪑"
+    },
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "swaync-client -t -sw",
+    "on-click-right": "swaync-client -d -sw",
+    "escape": true
   }
 }
