--- a/hypr/configs/monitors.conf
+++ b/hypr/configs/monitors.conf
@@ -15,13 +15,11 @@ monitorv2 {
 }
 
 
-workspace = 1, monitor:HDMI-A-2
-workspace = 2, monitor:HDMI-A-2
-workspace = 3, monitor:HDMI-A-2
-workspace = 4, monitor:HDMI-A-2
-workspace = 5, monitor:HDMI-A-2
-workspace = 6, monitor:DP-4
-workspace = 7, monitor:DP-4
-workspace = 8, monitor:DP-4
-workspace = 9, monitor:DP-4
-workspace = 0, monitor:DP-4
+workspace = 1, monitor:HDMI-A-2, persistent:true
+workspace = 2, monitor:HDMI-A-2, persistent:true
+workspace = 3, monitor:HDMI-A-2, persistent:true
+workspace = 4, monitor:HDMI-A-2, persistent:true
+workspace = 5, monitor:DP-4, persistent:true
+workspace = 6, monitor:DP-4, persistent:true
+workspace = 7, monitor:DP-4, persistent:true
+workspace = 8, monitor:DP-4, persistent:true
