--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -18,10 +18,9 @@
     }
   },
   "hyprland/workspaces": {
-    "format": "",
     "persistent-workspaces": {
-      "HDMI-A-2": [1, 2, 3, 4, 5],
-      "DP-4": [6, 7, 8, 9, 0]
+      "HDMI-A-2": [1, 2, 3, 4],
+      "DP-4": [5, 6, 7, 8]
     }
   },
   "hyprland/language": {
