--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -1,7 +1,8 @@
 exec-once = waybar # menu bar
 exec-once = hyprpaper # wallpapers
-exec-once = USE_LAYER_SHELL=0 vicinae server # application launcer
+exec-once = env USE_LAYER_SHELL=0 vicinae server # application launcer
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
-exec-once = hyprpm reload -n #plugins
+exec-once = hyprpm reload #plugins
 exec-once = ~/.config/hypr/scripts/window-movement-binds.sh code
 exec-once = swaync # notification daemon
+exec-once = /usr/bin/pypr # pyprland plugins
