--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -11,7 +11,7 @@ $menu = vicinae toggle
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
+# See https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, W, killactive,
 bind = $mainMod, L, exit,
@@ -23,6 +23,9 @@ bind = ALT, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, G, hyprexpo:expo, toggle
+
+# Scratchpads
+bind = ALT, T, exec, pypr toggle terminal
 
 # Change input language
 bindr = ALT SHIFT, Shift_L, exec, hyprctl switchxkblayout current next
