--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -5,16 +5,22 @@
   "height": 40,
   "spacing": 0,
   "reload_style_on_change": true,
-  "modules-left": ["hyprland/window"],
+  "modules-left": ["wlr/taskbar", "hyprland/window"],
   "modules-center": ["hyprland/workspaces"],
   "modules-right": ["hyprland/language", "pulseaudio", "network", "clock", "custom/notification"],
+  "wlr/taskbar": {
+    "format": "{icon}",
+    "icon-size": 16,
+    "tooltip-format": "{title}",
+    "all-outputs": true
+  },
   "hyprland/window": {
     "format": "{initialTitle}",
     "separate-outputs": true,
     "icon": true,
     "icon-size": 16,
     "rewrite": {
-      "": "Nothing here"
+      "": "Nothing"
     }
   },
   "hyprland/workspaces": {
