--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -32,7 +32,8 @@
   "hyprland/language": {
     "format": "{} ",
     "format-en": "EN",
-    "format-ru": "RU"
+    "format-ru": "RU",
+    "on-click": "hyprctl switchxkblayout current next"
   },
   "pulseaudio": {
     "format": "{volume}% {icon}",
