--- a/hypr/configs/rules.conf
+++ b/hypr/configs/rules.conf
@@ -11,3 +11,13 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 layerrule = blur,vicinae
 layerrule = ignorealpha 0, vicinae
 windowrule = noborder, class:vicinae
+
+# Swaync
+layerrule = blur, swaync-control-center
+layerrule = blur, swaync-notification-window
+
+layerrule = ignorezero, swaync-control-center
+layerrule = ignorezero, swaync-notification-window
+
+layerrule = ignorealpha 0.5, swaync-control-center
+layerrule = ignorealpha 0.5, swaync-notification-window
