--- a/hypr/configs/rules.conf
+++ b/hypr/configs/rules.conf
@@ -21,3 +21,5 @@ layerrule = ignorezero, swaync-notification-window
 
 layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
+
+layerrule = animation slide right, swaync-control-center
