--- a/swaync/config.json
+++ b/swaync/config.json
@@ -19,18 +19,18 @@
   "timeout": 10,
   "timeout-low": 5,
   "timeout-critical": 0,
-  "fit-to-screen": true,
+  "fit-to-screen": false,
   "relative-timestamps": true,
   "control-center-width": 500,
   "control-center-height": 600,
-  "notification-window-width": 500,
+  "notification-window-width": 350,
   "keyboard-shortcuts": true,
   "notification-grouping": true,
   "image-visibility": "when-available",
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
-  "text-empty": "No Notifications",
+  "text-empty": "No notifications",
   "script-fail-notify": true,
   "scripts": {
     "example-script": {
@@ -50,32 +50,27 @@
       "app-name": "Spotify"
     }
   },
-  "widgets": [
-    "inhibitors",
-    "title",
-    "dnd",
-    "notifications"
-  ],
+  "widgets": ["inhibitors", "title", "dnd", "notifications"],
   "widget-config": {
     "notifications": {
       "vexpand": true
     },
     "inhibitors": {
       "text": "Inhibitors",
-      "button-text": "Clear All",
+      "button-text": "Clear all",
       "clear-all-button": true
     },
     "title": {
       "text": "Notifications",
       "clear-all-button": true,
-      "button-text": "Clear All"
+      "button-text": "Clear all"
     },
     "dnd": {
-      "text": "Do Not Disturb"
+      "text": "Do not disturb"
     },
     "label": {
       "max-lines": 5,
-      "text": "Label Text"
+      "text": "Label text"
     },
     "mpris": {
       "blacklist": [],
