--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -53,8 +53,7 @@
       "default": ["", ""]
     },
     "scroll-step": 1,
-    "on-click": "pavucontrol",
-    "ignored-sinks": ["Easy Effects Sink"]
+    "on-click": "hyprctl dispatch exec \"[float; size 800x600] pavucontrol\""
   },
   "network": {
     "interface": "wlan0",
