--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -5,3 +5,5 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 # authentication agent
 exec-once = hyprpm reload #plugins
 exec-once = ~/.config/hypr/scripts/window-movement-binds.sh code
 exec-once = swaync # notification daemon
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Screen sharing
+exec-once = hypridle # idle management daemon
