--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -14,7 +14,8 @@ $mainMod = SUPER
 # See https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, W, killactive,
-bind = $mainMod, L, exec, hyprshutdown -t 'Shutting down...' --post-cmd 'shutdown -P 0',
+bind = $mainMod, L, exec, hyprlock
+bind = $mainMod shift, L, exec, hyprshutdown -t 'Shutting down...' --post-cmd 'shutdown -P 0',
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen, 1
