--- a/hypr/configs/misc.conf
+++ b/hypr/configs/misc.conf
@@ -2,6 +2,7 @@
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # You probably want this
+    precise_mouse_move = true
 }
 
 # https://wiki.hypr.land/Configuring/Master-Layout/
