--- a/hypr/configs/input.conf
+++ b/hypr/configs/input.conf
@@ -1,8 +1,7 @@
 # https://wiki.hypr.land/Configuring/Variables/#input
 input {
     kb_layout = us,ru
-
     follow_mouse = 1
-
+    numlock_by_default = true
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
