--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -5,16 +5,16 @@
   "height": 40,
   "spacing": 0,
   "reload_style_on_change": true,
-  "modules-left": ["wlr/taskbar", "hyprland/window"],
+  "modules-left": ["hyprland/window"],
   "modules-center": ["hyprland/workspaces"],
   "modules-right": ["hyprland/language", "group/settings", "clock", "custom/notification"],
-  "wlr/taskbar": {
-    "format": "{icon}",
-    "icon-size": 16,
-    "tooltip-format": "{title}",
-    "all-outputs": true,
-    "on-click": "activate"
-  },
+  // "wlr/taskbar": {
+  //   "format": "{icon}",
+  //   "icon-size": 16,
+  //   "tooltip-format": "{title}",
+  //   "all-outputs": true,
+  //   "on-click": "activate"
+  // },
   "hyprland/window": {
     "format": "{initialTitle}",
     "separate-outputs": true,
@@ -25,9 +25,15 @@
     }
   },
   "hyprland/workspaces": {
+    "format": "{windows}",
     "persistent-workspaces": {
       "HDMI-A-2": [1, 2, 3, 4],
       "DP-4": [5, 6, 7, 8]
+    },
+    "workspace-taskbar": {
+      "enable": true,
+      "format": "{icon}",
+      "icon-size": 16
     }
   },
   "hyprland/language": {
