--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -60,13 +60,12 @@ bind = $mainMod SHIFT, 2, movetoworkspace, r~2
 bind = $mainMod SHIFT, 3, movetoworkspace, r~3
 bind = $mainMod SHIFT, 4, movetoworkspace, r~4
 
-# Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+# Example special minimizingle single window via special workspace
+bind = $mainMod, M, togglespecialworkspace, minimizedWindow
+bind = $mainMod, M, movetoworkspace, +0
+bind = $mainMod, M, togglespecialworkspace, minimizedWindow
+bind = $mainMod, M, movetoworkspace, special:minimizedWindow
+bind = $mainMod, M, togglespecialworkspace, minimizedWindow
 
 # Move/resize windows: Now handled in a custom script to provide blacklist apps
 # bindm = alt, mouse:272, movewindow
