--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -27,8 +27,8 @@
   "hyprland/workspaces": {
     "format": "{windows}",
     "persistent-workspaces": {
-      "HDMI-A-2": [1, 2, 3, 4],
-      "DP-4": [5, 6, 7, 8]
+      "HDMI-A-2": [1, 2, 3, 4, "special:minimizedWindow"],
+      "DP-4": [5, 6, 7, 8, "special:minimizedWindow"]
     },
     "workspace-taskbar": {
       "enable": true,
