--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -16,7 +16,6 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, W, killactive,
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod shift, L, exec, hyprshutdown --post-cmd 'shutdown -P 0',
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen, 1
 bind = CAPS,     F, fullscreen
@@ -60,12 +59,17 @@ bind = $mainMod SHIFT, 2, movetoworkspace, r~2
 bind = $mainMod SHIFT, 3, movetoworkspace, r~3
 bind = $mainMod SHIFT, 4, movetoworkspace, r~4
 
-# Example special minimizingle single window via special workspace
+# Minimizing window via special workspace
 bind = $mainMod, M, togglespecialworkspace, minimizedWindow
 bind = $mainMod, M, movetoworkspace, +0
 bind = $mainMod, M, togglespecialworkspace, minimizedWindow
 bind = $mainMod, M, movetoworkspace, special:minimizedWindow
 bind = $mainMod, M, togglespecialworkspace, minimizedWindow
+
+# Scratchpad special workspace
+bind = CAPS, M, togglespecialworkspace, scratchpad
+bind = CAPS SHIFT, M, movetoworkspace, special:scratchpad
+bind = CAPS SHIFT, M, togglespecialworkspace, scratchpad
 
 # Move/resize windows: Now handled in a custom script to provide blacklist apps
 # bindm = alt, mouse:272, movewindow
