--- a/hypr/configs/styles.conf
+++ b/hypr/configs/styles.conf
@@ -63,23 +63,26 @@ animations {
     bezier = easeOutBack,    0.3, 1.15,  0.5, 1
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/
-    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     2.5,   easeOutQuint, popin 87%
-    animation = windowsOut,    1,     1.49,  linear,       popin 87%
-    animation = windowsMove,   1,     4,     easeOutBack
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
-    animation = layersIn,      1,     4,     easeOutQuint, fade
-    animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     4,     easeOutQuint, slide
-    animation = workspacesIn,  1,     4,     easeOutQuint, slide
-    animation = workspacesOut, 1,     4,     easeOutQuint, slide
-    animation = zoomFactor,    1,     7,     quick
+    #           NAME,             ONOFF, SPEED, CURVE,        [STYLE]
+    animation = global,              1,     10,    default
+    animation = border,              1,     5.39,  easeOutQuint
+    animation = windows,             1,     4.79,  easeOutQuint
+    animation = windowsIn,           1,     2.5,   easeOutQuint, popin 87%
+    animation = windowsOut,          1,     1.49,  linear,       popin 87%
+    animation = windowsMove,         1,     4,     easeOutBack
+    animation = fadeIn,              1,     1.73,  almostLinear
+    animation = fadeOut,             1,     1.46,  almostLinear
+    animation = fade,                1,     3.03,  quick
+    animation = layers,              1,     3.81,  easeOutQuint
+    animation = layersIn,            1,     4,     easeOutQuint, fade
+    animation = layersOut,           1,     1.5,   linear,       fade
+    animation = fadeLayersIn,        1,     1.79,  almostLinear
+    animation = fadeLayersOut,       1,     1.39,  almostLinear
+    animation = workspaces,          1,     4,     easeOutQuint, slide
+    animation = workspacesIn,        1,     4,     easeOutQuint, slide
+    animation = workspacesOut,       1,     4,     easeOutQuint, slide
+    animation = specialWorkspace,    1,     4,     easeOutQuint, slidefadevert 10%
+    animation = specialWorkspaceIn,  1,     4,     easeOutQuint, slidefadevert 10%
+    animation = specialWorkspaceOut, 1,     4,     easeOutQuint, slidefadevert 10%
+    animation = zoomFactor,          1,     7,     quick
 }
