--- a/hypr/configs/styles.conf
+++ b/hypr/configs/styles.conf
@@ -1,7 +1,7 @@
 
 
 # Setting app themes to dark
-exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita"   # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Fluent-round-grey-Dark"   # for GTK3 apps
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
