--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -20,6 +20,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen, 1
 bind = CAPS,     F, fullscreen
 bind = ALT, SPACE, exec, $menu
+bind = ALT, RETURN, fullscreen
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, G, hyprexpo:expo, toggle
