--- a/hypr/configs/env.conf
+++ b/hypr/configs/env.conf
@@ -12,3 +12,16 @@ env = NVD_BACKEND,direct
 
 # Open file with menu
 env = XDG_MENU_PREFIX,arch-
+
+# Force wayland for apps
+env = GDK_BACKEND,wayland
+env = XDG_SESSION_TYPE,wayland
+env = QT_QPA_PLATFORM,wayland
+env = CLUTTER_BACKEND,wayland
+env = SDL_VIDEODRIVER,wayland
+
+# Running GTK apps with cairo (CPU) renderer, because otherwise the context menus are lagging.
+env = GSK_RENDERER,cairo
+
+# Forcing to only use the dedicated GPU
+env = AQ_DRM_DEVICES,/dev/dri/nvidia-gpu
