--- a/hypr/configs/rules.conf
+++ b/hypr/configs/rules.conf
@@ -23,3 +23,6 @@ layerrule = ignorealpha 0.5, swaync-control-center
 layerrule = ignorealpha 0.5, swaync-notification-window
 
 layerrule = animation slide right, swaync-control-center
+
+# Media viewers should be opaque to not mess with the content
+windowrule = opaque, float, class:org.gnome.Loupe, class:(.*)(Celluloid)
