SwayOSD and Raycast shortcuts

--- a/hypr/configs/autostart.conf
+++ b/hypr/configs/autostart.conf
@@ -1,9 +1,10 @@
 exec-once = waybar # menu bar
 exec-once = hyprpaper # wallpapers
-exec-once = env USE_LAYER_SHELL=0 vicinae server # application launcer
+exec-once = USE_LAYER_SHELL=0 EMOJI_FONT="Apple Color Emoji" vicinae server # application launcer
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 # authentication agent
 exec-once = hyprpm reload #plugins
 exec-once = ~/.config/hypr/scripts/window-movement-binds.sh code
 exec-once = swaync # notification daemon
+exec-once = swayosd-server # osd daemon
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Screen sharing
 exec-once = hypridle # idle management daemon
