--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -6,7 +6,6 @@ binds {
 
 $terminal = ghostty
 $fileManager = dolphin
-$menu = vicinae toggle
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
@@ -19,7 +18,6 @@ bind = $mainMod shift, L, exec, hyprshutdown --post-cmd 'shutdown -P 0',
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen, 1
 bind = CAPS,     F, fullscreen
-bind = ALT, SPACE, exec, $menu
 bind = ALT, RETURN, fullscreen
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -35,6 +33,10 @@ bind = SHIFT, PRINT, exec, hyprshot -m window --clipboard-only --freeze
 
 # Color picker
 bind = $mainMod SHIFT, C, exec, hyprpicker -a
+
+# Vicinae
+bind = $mainMod, period, exec, vicinae vicinae://extensions/vicinae/vicinae/search-emojis
+bind = ALT, SPACE, exec, vicinae toggle
 
 # Waybar
 bind = $mainMod SHIFT, B, exec, ~/.config/hypr/scripts/reload-waybar.sh ~/.config/hypr/wallpaper/wallpaper.png
@@ -76,16 +78,12 @@ bind = CAPS SHIFT, M, togglespecialworkspace, scratchpad
 # bindm = alt, mouse:272, movewindow
 # bindm = alt, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+# Multimedia keys for volume and LCD brightness
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindel = ,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
+bindl = ,XF86AudioPlay, exec, swayosd-client --playerctl play-pause
+bindl = ,XF86AudioPause, exec, swayosd-client --playerctl play-pause
+bindl = , XF86AudioNext, exec, swayosd-client --playerctl next
+bindl = , XF86AudioPrev, exec, swayosd-client --playerctl previousa
