--- a/hypr/configs/rules.conf
+++ b/hypr/configs/rules.conf
@@ -24,5 +24,10 @@ layerrule = ignorealpha 0.5, swaync-notification-window
 
 layerrule = animation slide right, swaync-control-center
 
+# Swayosd
+layerrule = blur, swayosd
+layerrule = ignorezero, swayosd
+layerrule = ignorealpha 0.3, swayosd
+
 # Media viewers should be opaque to not mess with the content
 windowrule = opaque, float, class:org.gnome.Loupe, class:(.*)(Celluloid)
