--- a/swaync/config.json
+++ b/swaync/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "/etc/xdg/swaync/configSchema.json",
-  "ignore-gtk-theme": true,
+  "ignore-gtk-theme": false,
   "positionX": "right",
   "positionY": "top",
   "layer": "overlay",
