--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -9,6 +9,7 @@ $fileManager = dolphin
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
+$hyper = SHIFT CONTROL SUPER ALT
 
 # See https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
@@ -17,8 +18,8 @@ bind = $mainMod, L, exec, hyprlock
 bind = $mainMod shift, L, exec, hyprshutdown --post-cmd 'shutdown -P 0',
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen, 1
-bind = CAPS,     F, fullscreen
-bind = ALT, RETURN, fullscreen
+bind = $hyper,   F, fullscreen
+bind = ALT,      RETURN, fullscreen
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, G, hyprexpo:expo, toggle
