Move windows with hyper

--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -9,7 +9,7 @@ $fileManager = dolphin
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
-$hyper = SHIFT CONTROL SUPER ALT
+$hyper = SHIFT CONTROL ALT
 
 # See https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
@@ -63,6 +63,12 @@ bind = $mainMod SHIFT, 2, movetoworkspace, r~2
 bind = $mainMod SHIFT, 3, movetoworkspace, r~3
 bind = $mainMod SHIFT, 4, movetoworkspace, r~4
 
+# Move active window
+bind = $hyper, left, movewindow, l
+bind = $hyper, up, movewindow, u
+bind = $hyper, down, movewindow, d
+bind = $hyper, right, movewindow, r
+
 # Minimizing window via special workspace
 bind = $mainMod, M, togglespecialworkspace, minimizedWindow
 bind = $mainMod, M, movetoworkspace, +0
@@ -71,9 +77,9 @@ bind = $mainMod, M, movetoworkspace, special:minimizedWindow
 bind = $mainMod, M, togglespecialworkspace, minimizedWindow
 
 # Scratchpad special workspace
-bind = CAPS, M, togglespecialworkspace, scratchpad
-bind = CAPS SHIFT, M, movetoworkspace, special:scratchpad
-bind = CAPS SHIFT, M, togglespecialworkspace, scratchpad
+bind = $hyper, M, togglespecialworkspace, scratchpad
+bind = $hyper SUPER, M, movetoworkspace, special:scratchpad
+bind = $hyper SUPER, M, togglespecialworkspace, scratchpad
 
 # Move/resize windows: Now handled in a custom script to provide blacklist apps
 # bindm = alt, mouse:272, movewindow
