Better icon resolution

--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -81,9 +81,9 @@ bind = $hyper, M, togglespecialworkspace, scratchpad
 bind = $hyper SUPER, M, movetoworkspace, special:scratchpad
 bind = $hyper SUPER, M, togglespecialworkspace, scratchpad
 
-# Move/resize windows: Now handled in a custom script to provide blacklist apps
-# bindm = alt, mouse:272, movewindow
-# bindm = alt, mouse:273, resizewindow
+# Move/resize windows with mouse 1 and mouse 2. ALT + LMB and ALT + RMB are controlled via scripts/window-movement-binds.sh
+bindm = , mouse:275, movewindow
+bindm = , mouse:276, resizewindow
 
 # Multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
