--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -4,18 +4,15 @@ binds {
   allow_workspace_cycles = true
 }
 
-$terminal = ghostty
-$fileManager = dolphin
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
 $hyper = SHIFT CONTROL ALT
 
 # See https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
+bind = $mainMod, T, exec, ghostty
 bind = $mainMod, W, killactive,
 bind = $mainMod, L, exec, hyprlock
-bind = $mainMod shift, L, exec, hyprshutdown --post-cmd 'shutdown -P 0',
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, fullscreen, 1
 bind = $hyper,   F, fullscreen
