--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -4,13 +4,12 @@ binds {
   allow_workspace_cycles = true
 }
 
+# See https://wiki.hypr.land/Configuring/Binds/ for more
 
-# See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER
 $hyper = SHIFT CONTROL ALT
 
-# See https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, T, exec, ghostty
+# General management
 bind = $mainMod, W, killactive,
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, V, togglefloating,
@@ -19,6 +18,12 @@ bind = $hyper,   F, fullscreen
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, G, hyprexpo:expo, toggle
+
+# Launching apps
+bind = $mainMod, T, exec, ghostty
+bind = $hyper, T, exec, Telegram
+bind = $hyper, B, exec, firefox
+bind = $hyper, G, exec, github-desktop
 
 # Change input language
 bindr = ALT SHIFT, Shift_L, exec, hyprctl switchxkblayout current next
