--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -6,4 +6,5 @@
 # capslock = timeout(capslock, 100, layer(caps_hyper))
 capslock = layer(caps_hyper)
 
-[caps_hyper:S-C-A] # Shift + Control + Alt
+# Shift + Control + Alt
+[caps_hyper:S-C-A] 
