--- a/hypr/configs/rules.conf
+++ b/hypr/configs/rules.conf
@@ -31,3 +31,8 @@ layerrule = ignorealpha 0.3, swayosd
 
 # Media viewers should be opaque to not mess with the content
 windowrule = opaque, float, class:org.gnome.Loupe, class:(.*)(Celluloid)
+
+# Waybar
+layerrule = blur, waybar
+layerrule = ignorezero, waybar
+layerrule = ignorealpha 0.3, waybar
