--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -94,4 +94,4 @@ bindel = ,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
 bindl = ,XF86AudioPlay, exec, swayosd-client --playerctl play-pause
 bindl = ,XF86AudioPause, exec, swayosd-client --playerctl play-pause
 bindl = , XF86AudioNext, exec, swayosd-client --playerctl next
-bindl = , XF86AudioPrev, exec, swayosd-client --playerctl previousa
+bindl = , XF86AudioPrev, exec, swayosd-client --playerctl previous
