--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -24,6 +24,7 @@ bind = $mainMod, T, exec, ghostty
 bind = $hyper, T, exec, Telegram
 bind = $hyper, B, exec, firefox
 bind = $hyper, G, exec, github-desktop
+bind = CONTROL SHIFT, ESCAPE, exec, [float] resources
 
 # Change input language
 bindr = ALT SHIFT, Shift_L, exec, hyprctl switchxkblayout current next
