--- a/hypr/configs/binds.conf
+++ b/hypr/configs/binds.conf
@@ -17,7 +17,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, G, hyprexpo:expo, toggle
 bind = $mainMod, F, fullscreen, 1
-bind = $hyper,   F, fullscreen
+bind = $hyper,   F, fullscreenstate, 2
 
 # Launching apps
 bind = $mainMod, T, exec, ghostty
