--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -3,8 +3,8 @@
 *
 
 [main]
-# capslock = timeout(capslock, 100, layer(caps_hyper))
-capslock = layer(caps_hyper)
+capslock = timeout(capslock, 150, layer(caps_hyper))
+# capslock = layer(caps_hyper)
 
 # Shift + Control + Alt
 [caps_hyper:S-C-A] 
