--- a/keyd/default.conf
+++ b/keyd/default.conf
@@ -3,7 +3,8 @@
 *
 
 [main]
-capslock = timeout(capslock, 150, layer(caps_hyper))
+capslock = timeout(layer(caps_hyper), 150, capslock)
+# capslock = timeout(capslock, 150, layer(caps_hyper))
 # capslock = layer(caps_hyper)
 
 # Shift + Control + Alt
