--- a/hypr/configs/plugins.conf
+++ b/hypr/configs/plugins.conf
@@ -7,4 +7,7 @@ plugin {
 
         gesture_distance = 300 # how far is the "max" for the gesture
     }
+    dynamic-cursors {
+        mode = stretch
+    }
 }
